tests/type-check/bad/_plus-missing.arr
include string-dict 

[string-dict:].get("b") + 6